# PR-Bot

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.example.cfg
cmake/: FindDPP.cmake
src/: main.cpp
src/interactions/: command.h  slashcommands_manager.cpp  slashcommands_manager.h
src/interactions/commands/: issue.cpp  issue.h
src/utils/: github.cpp  github.h  misc.cpp  misc.h  regex.cpp  regex.h
